try to fix overflow issue

--- a/src/modules/TrendIndex/components/trendIndex/trendIndex.component.scss
+++ b/src/modules/TrendIndex/components/trendIndex/trendIndex.component.scss
@@ -148,7 +148,8 @@
   .data-table {
     display: flex;
     max-height: 100%;
-    overflow: scroll;
+    overflow-y: scroll;
+    max-width: 100%;
   }
 
   .strength-positive {
